--- a/src/pages/headerPages.css
+++ b/src/pages/headerPages.css
@@ -7,7 +7,7 @@ header {
     background-image: url('../Images/cat.jpg');
     width: 100%;
     height: 300px;
-    background-size: 100%;
+    background-size: cover;
     background-position: center; 
 }
 
@@ -16,6 +16,7 @@ header {
     flex-direction: row;
     gap: 20px;
     padding: 0 20px;
+    align-items: center;
 }
 
 .navbarre {
@@ -36,8 +37,40 @@ header {
 .nav a, .nav div a, .logoDiv a{
     text-decoration: none;
     color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    vertical-align:middle;
+    display: flex;
+    align-items: center;
 }
 
-.logoDiv a {
+.logoDiv a h3{
     font-weight: bold;
+}
+
+.nav div a h3{
+    color: #FED5D7;
+}
+
+.nav div {
+    background-color: #EF5773;
+    padding: 0 10px;
+    border-radius: 30px;
+}
+
+.nav .connect {
+    color: #EF5773;
+}
+
+@media (max-width: 768px) {
+    .navbarre {
+        flex-direction: column;
+    }
+    .nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    header {
+        height: 300px;
+    }
+
 }
