Feature/headerPages beggining of the responsive

--- a/src/pages/headerPages.css
+++ b/src/pages/headerPages.css
@@ -61,6 +61,10 @@ header {
     color: #EF5773;
 }
 
+.nav div a {
+    height: 40px
+}
+
 @media (max-width: 768px) {
     .navbarre {
         flex-direction: column;
