--- a/src/pages/headerPages.css
+++ b/src/pages/headerPages.css
@@ -65,16 +65,58 @@ header {
     height: 40px
 }
 
+.burgerNav {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .navbarre {
-        flex-direction: column;
+        flex-direction: row;
     }
+
     .nav {
         flex-direction: column;
         align-items: center;
     }
+
     header {
-        height: 300px;
+        height: 100px;
     }
 
+    .nav {
+        display: none;
+    }
+
+    .burgerNav {
+        display: block;
+        display: flex;
+        flex-direction:row-reverse;
+    }
+
+    .burgerButton {
+        background: transparent;
+        border: none;
+    }
+
+    .burgerMenu {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .redirectionPage {
+        display: flex;
+        flex-direction: column;
+        background-color:#FED5D7;
+        padding: 0 20px;
+        max-width: 500px;
+        border-radius: 10px;
+        z-index: 100;
+    }
+
+    .redirectionPage a {
+        color: #EF5773;
+        text-decoration: none;
+    }
 }
