--- a/src/pages/RegisterLogin.css
+++ b/src/pages/RegisterLogin.css
@@ -1,11 +1,12 @@
 body {
     background-color: #FFE4E4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     margin: 0;
+}
+
+.page-container {
+    margin: 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .banner {
@@ -28,7 +29,7 @@ body {
 
 .form-container {
     background-color: white;
-    padding: 65px; 
+    padding: 25px; 
     border-radius: 20px;
     text-align: center;
     width: 130%; 
@@ -36,13 +37,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px; 
-    margin-top: 180px; 
     font-family: Arial;
 }
 
 .form-container h2 {
-    font-size: 2.8rem;
     margin-bottom: 30px;
 }
 
@@ -58,15 +56,13 @@ body {
 .auth-text {
     font-weight: bold;
     color: black;
-    font-size: 2.1rem; 
     margin-bottom: 10px;
     font-family: Arial;
 }
 button {
     border: none;
     border-radius: 30px;
-    padding: 15px 30px; 
-    font-size: 1.5rem; 
+    padding: 15px;
     font-weight: bold;
     cursor: pointer;
     width: 100%;
