--- a/src/pages/headerPages.css
+++ b/src/pages/headerPages.css
@@ -6,7 +6,7 @@
 header {
     background-image: url('../Images/cat.jpg');
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-size: cover;
     background-position: center; 
 }
@@ -20,7 +20,6 @@ header {
 }
 
 .navbarre {
-    height: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -99,7 +98,7 @@ header {
     }
 
     .burgerMenu {
-        position: fixed;
+        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -113,7 +112,7 @@ header {
         max-width: 700px;
         min-width: 200px;
         border-radius: 10px;
-        z-index: 100;
+        z-index: 9999;
         text-align:center;
     }
 
