--- a/src/pages/register.css
+++ b/src/pages/register.css
@@ -1,6 +1,7 @@
 body {
    background-color: #FFE4E4;
    font-family: sans-serif;
+   margin: 0%;
 }
 
 form {
@@ -8,10 +9,10 @@ form {
    padding: 40px;
    border-radius: 10px;
    margin: 50px auto;
-   width: 350px;
+   max-width: 300px;
 }
 
-h2 {
+form h2 {
    font-size: 2em;
    font-weight: bold;
    margin-bottom: 30px;
